--- a/docs/03.技术/02.GitHub技巧/02.GitHub Pages 实现部署vdoing博客.md
+++ b/docs/03.技术/02.GitHub技巧/02.GitHub Pages 实现部署vdoing博客.md
@@ -33,7 +33,7 @@ author:
 下载[vuepress-theme-vdoing](https://github.com/xugaoyi/vuepress-theme-vdoing.git)zip压缩包。
 
 ```sh
-git clone https://<你的token>@github.com/kxuer/kxuer.github.io.git
+git clone https://<你的token>@github.com/<你的用户名>/<你的用户名>.github.io.git
 cd kxuer.github.io
 ```
 
