添加前端笔记

--- a/docs/03.技术/01.技术文档/02.Markdown使用教程.md
+++ b/docs/03.技术/01.技术文档/02.Markdown使用教程.md
@@ -588,7 +588,7 @@ function test() {
 [百度](http://www.baidu.com,'百度')
 ```
 
-[百度](http://www.baidu.com,'百度')
+[百度](www.baidu.com,'百度')
 
 直接显示链接地址：
 
@@ -598,6 +598,8 @@ function test() {
 
 <http://www.baidu.com>
 
+> 注意：如果不添加协议前缀（如http://），点击后访问的是当前网站的路径（http://localhost:8080/pages/ad247c4332211551/www.baidu.com），而不进行跳转。
+>
 
 
 ### 变量链接
