排查编译出错：angularjs.md

--- a/docs/01.前端/40.框架/03.AngularJS.md
+++ b/docs/01.前端/40.框架/03.AngularJS.md
@@ -16,3 +16,28 @@ author:
 1. 创建 AngularJS 自定义过滤器，带自定义参数：[cnblogs](https://www.cnblogs.com/leejersey/p/4662012.html)
 
 2. 翻转显示列表Reverse list in ng-repeat： `ng-repeat="feed in feeds | orderBy:'':true"`   中间不要参数
+
+### 内置指令
+
+1. ng-if 指令不同于 ng-hide， ng-hide 隐藏元素（使用css-`display: none;`），而 ng-if 是从 DOM 中移除元素。
+
+2.  ng-bind与{{}}取值的区别：[csdn](https://blog.csdn.net/m0_38099607/article/details/72472234)
+
+{{ }} 是等页面加载完后，再取值；
+
+ng-bind 它是在页面加载的时候，是不会显示{{name}}这种变量出来；
+
+ng-bind 可以解决 ng 页面闪烁加载问题；
+
+ng-bind 只能绑定单个变量，但是 {{ }} 这种方法可以绑定多个变量。
+                
+
+### 内置变量
+
+1. `$event`变量：浏览器事件
+
+使用示例：获取点击的元素ng-click="aaa('1',$event)"，可通过$event变量获取浏览器事件，进而获取元素e.target，则阻止表单提交的默认行为e.preventDefault()。
+
+2. `$index`变量：列表的索引
+
+3. `$scope`与`$rootScope`：[csdn](https://blog.csdn.net/ethan_10/article/details/81813646)
