排查编译出错：angularjs.md

--- a/docs/01.前端/40.框架/03.AngularJS.md
+++ b/docs/01.前端/40.框架/03.AngularJS.md
@@ -87,3 +87,49 @@ $http({                  //http服务
 7. ng-if中的ng-model值无效： ng-if指令也会创建一个子级作用域，因此使用`ng-model="$parent.b"`。[jb51](https://www.jb51.net/article/116782.htm)
 
 8. 貌似无法在HTML里面直接调用自定义service的函数，但是可以使用`$scope.**=**`给变量赋值。
+
+## 实践
+
+1. angular，jQuery.validate和layer合作方式：
+```js
+var validator;
+layer.open({
+    type: 1,
+    title: "Edit Address",
+    btn: ['OK','Cancel'],
+    skin: 'layui-layer-prompt',    //不要这个会导致页面不好看
+    content: $("#vform2"),        //vform2的元素要早早放在页面，否则angular无法监听后来新生成的HTML元素，要通过$compile(template)($scope);，angular才能监听到，而且这种方法在尝试后发现与jQuery.validate和layer协作的时候得不到想要的结果
+    area: ['550px', '310px'],
+    success: function(layero, index){                
+        validator = $("#vform2").validate({
+            rules: {
+              elabel: {
+                  label: true,
+                  required: true,
+              },
+            },
+            messages: {                
+              elabel: {                
+                maxlength: "maxlength: 25 characters",
+              },
+            }  
+        });
+        validator.resetForm();    //这个函数不要乱放
+    },
+    yes: function(index, layero){
+    //do something              
+      if(validator.form()){
+          $scope.edit();
+          layer.close(index); //如果设定了yes回调，需进行手工关闭                  
+      }
+    }
+});
+```
+显示小提示：
+```js
+errorPlacement: function(error, element){
+    layui.layer.tips(error.text(), element, {
+        tips: [1, '#3595CC']
+    });
+},
+```
