排查编译出错：angularjs.md

--- a/docs/01.前端/40.框架/03.AngularJS.md
+++ b/docs/01.前端/40.框架/03.AngularJS.md
@@ -70,6 +70,24 @@ $http({                  //http服务
 2. $http拦截器$httpProvider.interceptors。
 
 
+## 排错
+
+1. Angular的页面貌似必须注册module，否则可能会出现问题。
+
+2. `{{ sum2 = price2&&amount2 ? (price2 | number:8)*(amount2 | number:8) : 0.0 }}` 在price2或amount2大于等于1000时结果为NaN，原因不明，改用自己写的toNumberFilter过滤器。
+
+3. 新加入的HTML元素不会被angular监听，要通过，angular才能监听到。
+
+4. directive实例可看看[gitee](https://gitee.com/zoujingli/Angular.Admin/blob/master/script/provider/my-form.js)
+
+5. 与别的框架一起使用（如layUI）时angularJS中$scope.变量更新了视图没有更新：`$scope.$apply()`    [imooc](https://www.imooc.com/article/13354)
+
+6. 渲染未完成闪烁问题：[imooc](https://www.imooc.com/qadetail/104318)  [csdn](https://blog.csdn.net/xingyu0806/article/details/51646684)
+
+7. ng-if中的ng-model值无效： ng-if指令也会创建一个子级作用域，因此使用`ng-model="$parent.b"`。[jb51](https://www.jb51.net/article/116782.htm)
+
+8. 貌似无法在HTML里面直接调用自定义service的函数，但是可以使用`$scope.**=**`给变量赋值。
+
 ## 实践
 
 1. angular，jQuery.validate和layer合作方式：
