排查编译出错：angularjs.md

--- a/docs/01.前端/40.框架/03.AngularJS.md
+++ b/docs/01.前端/40.框架/03.AngularJS.md
@@ -74,9 +74,9 @@ $http({                  //http服务
 
 1. Angular的页面貌似必须注册module，否则可能会出现问题。
 
-2. `{{ sum2 = price2&&amount2 ? (price2 | number:8)*(amount2 | number:8) : 0.0 }}` 在price2或amount2大于等于1000时结果为NaN，原因不明，改用自己写的toNumberFilter过滤器。
+2.  在price2或amount2大于等于1000时结果为NaN，原因不明，改用自己写的toNumberFilter过滤器。
 
-3. 新加入的HTML元素不会被angular监听，要通过，angular才能监听到。
+3. 新加入的HTML元素不会被angular监听，要通过`$compile(template)($scope);`，angular才能监听到。
 
 4. directive实例可看看[gitee](https://gitee.com/zoujingli/Angular.Admin/blob/master/script/provider/my-form.js)
 
