--- a/docs/03.技术/02.GitHub技巧/02.GitHub Pages 实现部署vdoing博客.md
+++ b/docs/03.技术/02.GitHub技巧/02.GitHub Pages 实现部署vdoing博客.md
@@ -66,3 +66,11 @@ npm run dev
 1. 写文章时，大概的流程：[xugaoyi](https://doc.xugaoyi.com/pages/9ae0bd/)
 
 2. 在线编辑原有的文章：[xugaoyi](https://doc.xugaoyi.com/pages/c5a54d/) 注：配置文件为`docs\.vuepress\config.ts`
+
+## 排错
+
+1. GitHub构建报错：`Module build failed (from ./node_modules/vue-loader/lib/loaders/templateLoader.js): SyntaxError: Unexpected token, expected ","`
+
+原因：反引号\`\`可以使markdown文字高亮，但同时与{{}}使用会使其解析{{}}中的变量，如\`\{\{ sum2 = price2&&amount2 ? (price2 | number:8)*(amount2 | number:8) : 0.0 \}\}\`。
+
+解决：使用反斜杠转义\{\{\}\}
