排查编译出错，找到原因并记笔记

--- a/docs/01.前端/20.CSS/80.注意事项.md
+++ b/docs/01.前端/20.CSS/80.注意事项.md
@@ -15,7 +15,7 @@ author:
 
 ## 前置知识
 
-1. CSS类在文档中出现的顺序也会影响实际的显示效果？-à对于相同类型选择器制定的样式，在样式表文件中，越靠后的优先级越高。
+1. CSS类在文档中出现的顺序也会影响实际的显示效果？->对于相同类型选择器制定的样式，在样式表文件中，越靠后的优先级越高。
 
 
 ## 规范
