--- a/docs/03.技术/02.GitHub技巧/02.GitHub Pages 实现部署vdoing博客.md
+++ b/docs/03.技术/02.GitHub技巧/02.GitHub Pages 实现部署vdoing博客.md
@@ -71,6 +71,10 @@ npm run dev
 
 1. GitHub构建报错：`Module build failed (from ./node_modules/vue-loader/lib/loaders/templateLoader.js): SyntaxError: Unexpected token, expected ","`
 
-原因：反引号\`\`可以使markdown文字高亮，但同时与{{}}使用会使其解析{{}}中的变量，如\`\{\{ sum2 = price2&&amount2 ? (price2 | number:8)*(amount2 | number:8) : 0.0 \}\}\`。
+原因：使用\{\{\}\}会使其解析中的变量，如`\{\{ sum2 = price2&&amount2 ? (price2 | number:8)*(amount2 | number:8) : 0.0 \}\}`。
 
-解决：使用反斜杠转义\{\{\}\}
+解决：写markdown笔记时使用反斜杠转义{{}}，实际代码去掉反斜杠。
+
+ps：实际发现一行中不能出现两个{{}}，否则也出错。
+
+ps：尽管本地运行npm run dev不报错，push到GitHub才报错，也不用每次都修改一点push到GitHub中尝试发现错误，因为尽管本地运行npm run dev不报错，但打开对应页面是没有东西的，因此可以本地修改直到正常显示页面为止。
