调整目录文件；添加新的js笔记

--- a/docs/03.技术/02.GitHub技巧/02.GitHub Pages 实现部署vdoing博客.md
+++ b/docs/03.技术/02.GitHub技巧/02.GitHub Pages 实现部署vdoing博客.md
@@ -63,18 +63,22 @@ npm run dev
 
 ## 实践
 
-1. 写文章时，大概的流程：[xugaoyi](https://doc.xugaoyi.com/pages/9ae0bd/)
+1. 写文章时大概的流程：[xugaoyi](https://doc.xugaoyi.com/pages/9ae0bd/)
 
 2. 在线编辑原有的文章：[xugaoyi](https://doc.xugaoyi.com/pages/c5a54d/) 注：配置文件为`docs\.vuepress\config.ts`
+
+3. 目录页配置：[xugaoyi目录页配置](https://doc.xugaoyi.com/pages/54651a/) 注：可在`docs\00.目录页`下放置目录页文件(.md文件)，对应`docs`目录下的文件夹，在`docs\00.目录页`下新建文件夹，放置子目录对应的目录页文件(.md文件)。
+
+<img src="https://cdn.staticaly.com/gh/kxuer/image_store@main/img/tempsnip.1x21a4r33ips.png" width="20%">
 
 ## 排错
 
 1. GitHub构建报错：`Module build failed (from ./node_modules/vue-loader/lib/loaders/templateLoader.js): SyntaxError: Unexpected token, expected ","`
 
-原因：使用\{\{\}\}会使其解析中的变量，如`\{\{ sum2 = price2&&amount2 ? (price2 | number:8)*(amount2 | number:8) : 0.0 \}\}`。
+原因：使用\{\{\}\}会使vue-loader解析其中的变量，如`\{\{ sum2 = price2&&amount2 ? (price2 | number:8)*(amount2 | number:8) : 0.0 \}\}`。
 
 解决：写markdown笔记时使用反斜杠转义{{}}，实际代码去掉反斜杠。
 
-ps：实际发现一行中不能出现两个{{}}，否则也出错。
+ps：实践中发现一行中不能出现两个{{}}，否则也出错。
 
 ps：尽管本地运行npm run dev不报错，push到GitHub才报错，也不用每次都修改一点push到GitHub中尝试发现错误，因为尽管本地运行npm run dev不报错，但打开对应页面是没有东西的，因此可以本地修改直到正常显示页面为止。
