--- a/docs/01.前端/30.JavaScript/80.第三方库.md
+++ b/docs/01.前端/30.JavaScript/80.第三方库.md
@@ -14,9 +14,249 @@ author:
 
 # 第三方库
 
+
+## jQuery
+
+1. 选择器：
+
+通配符选择器：
+
+```js
+$("input[name*='code']");//name属性包含code的所有input标签。
+```
+dom选择器筛选统计：
+```js
+document.querySelectorAll("a[href^='https://leetcode']")
+```
+
+2. [jQuery Validation plugin - Validating hidden inputs and not visible?](https://stackoverflow.com/questions/7952181/jquery-validation-plugin-validating-hidden-inputs-and-not-visible)
+
+    清空input type="file"应该使用
+
+    .val("");    //清空input,不是.value="";否则jQuery Validation无法感知到。
+
+    手动触发input的change、input事件有点麻烦，貌似对jQuery Validation没什么用，所以手动验证一个element： 
+    validator.element( "#myselect" );  //https://jqueryvalidation.org/Validator.element/
+
+    与layUI合作的例子：
+```js
+laydate.render({
+    elem: '#passportexpiration', //指定元素
+    done: function(value, date, endDate){    //控件选择完毕后的回调
+        validator.element( "#birth" );    //Validates a single element.
+    } 
+});
+```
+
+3. js input file文件上传图片并展示：
+
+```html
+<input type="file" accept="image/jpg,image/jpeg,image/png" name="identitypic" contenteditable="false" id="passfile1-0" onchange="fileChange(this);">
+```
+
+```js
+function fileChange(target) {
+    console.log(target);
+    var fileSize = 0;
+    fileSize = target.files[0].size;
+    var size = fileSize / 1024;
+    console.log("filesize: " + size);
+    if(size>5000){
+       alert("Max image size is 5M");
+       target.val("");
+       return false;   //阻止submit提交
+    }
+    var name=target.value;
+    var fileName = name.substring(name.lastIndexOf(".")+1).toLowerCase();
+    if(fileName !="jpg" && fileName !="jpeg" && fileName !="png"){
+       alert("File format is not surported！");
+       target.val("");
+       return false;   //阻止submit提交
+    }
+    var file = target.files[0];
+    if (window.FileReader) {
+       var reader = new FileReader();
+       reader.readAsDataURL(file);
+       //监听文件读取结束后事件
+       reader.onloadend = function (e) {
+           console.log($(target).parent().prevAll(".display").children("img"));
+           $(target).parent().prevAll(".display").children("img").attr("src", e.target.result);    //e.target.result就是最后的路径地址
+           $(target).parent().prevAll(".upload").hide();
+           $(target).parent().prevAll(".display").show();
+           $(target).parent().prevAll(".photo-err").hide();
+       };
+   }
+};
+```
+
+4. 生成json数组
+
+```js
+var datas = [];
+
+for (x in res.result) { //x为键
+    var data = {};
+    $.extend(data, {"asset": x}, res.result[x]);
+    datas.push(data);
+}
+```
+
+5. 元素插入删除：
+```js
+// 在每个匹配的元素之后插入内容: 
+$("p").after("<b>Hello</b>");     
+$(element).closest(".form-group").after(error);
+// 作为放到最后的子元素： 
+$(element).closest(".form-group").append(error);
+```
+
+6. jquery禁用、启用button以及button的样式操作：[csdn](https://blog.csdn.net/qq_38455201/article/details/80591530)
+
+7. `$(document).on('click.bs.dropdown.data-api', '[data-toggle="dropdown"]', Dropdown.prototype.toggle)` 中当Dropdown.prototype.toggle()被调用时，Dropdown.prototype.toggle()里面的this会指代被点击的元素，这里的对象是如何生成的？
+-- When jQuery calls a handler, the this keyword is a reference to the element where the event is being delivered; for directly bound events this is the element where the event was attached and for delegated events this is an element matching selector. (Note that this may not be equal to event.target if the event has bubbled from a descendant element.) To create a jQuery object from the element so that it can be used with jQuery methods, use $( this ).   [jquery](https://api.jquery.com/on/#on-events-selector-data-handler)
+
+8. A click event handler attached via that string could be removed with .off("click.myPlugin") or .off("click.simple") without disturbing other click handlers attached to the elements.
+
+9. event.target indicates the deepest (innermost) element where the event occurred.
+
+10. Returning false from an event handler will automatically call event.stopPropagation() and event.preventDefault().
+
+
+### jquery-validation
+1. 表单校验（与jquery配合使用）
+
+校验日期格式： date:true
+
+2. 示例
+```js
+//    jQuery.validator.addMethod("nickname", function(value, element, param){        //不能取名name，取名name会对所有的表单进行校验
+//        var regex = /^[a-zA-Z0-9_]+$/;
+//        return regex.test(value);
+//    }, "用户名只能包含大写、小写、数字和下划线");
+//    jQuery.validator.addMethod("pwd", function(value, element, param){
+//        var regex = /^(?:(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])|(?=.*[A-Z])(?=.*[a-z])(?=.*[^A-Za-z0-9])|(?=.*[A-Z])(?=.*[0-9])(?=.*[^A-Za-z0-9])|(?=.*[a-z])(?=.*[0-9])(?=.*[^A-Za-z0-9])).{8,16}$/;
+//        return regex.test(value);
+//    }, "用户密码需要包含数字、小写字母、大写字母、符号(至少三种)");
+
+jQuery.validator.addMethod("regex", function(value, element, param){    //自定义验证方法
+        var regex = param;
+        return regex.test(value);    
+}, "error");
+        
+$().ready(function() {
+// 在键盘按下并释放及提交后验证提交表单
+  $("#vform").validate({
+      errorPlacement: function(error, element){
+          $(element).closest(".form-group").append(error);
+      },
+      errorElement: "small",
+    rules: {
+      nickname: {
+        required: true,
+        rangelength: [6, 18],
+        regex: /^[a-zA-Z0-9_]+$/
+      },
+      email: {
+        required: true,
+        email: true
+      },
+      curPassword: {
+        required: true,
+        rangelength: [8, 16],
+        regex: /^(?:(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])|(?=.*[A-Z])(?=.*[a-z])(?=.*[^A-Za-z0-9])|(?=.*[A-Z])(?=.*[0-9])(?=.*[^A-Za-z0-9])|(?=.*[a-z])(?=.*[0-9])(?=.*[^A-Za-z0-9])).{8,16}$/
+      },
+      password: {
+        required: true,
+        rangelength: [8, 16],
+        regex: /^(?:(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])|(?=.*[A-Z])(?=.*[a-z])(?=.*[^A-Za-z0-9])|(?=.*[A-Z])(?=.*[0-9])(?=.*[^A-Za-z0-9])|(?=.*[a-z])(?=.*[0-9])(?=.*[^A-Za-z0-9])).{8,16}$/
+      },
+      password2: {
+        required: true,
+        equalTo: "#password"
+      },
+      authCode: {
+          required: true,
+          minlength: 6
+      },
+      agree: "required"
+    },
+    messages: {
+      nickname: {
+        required: "请输入用户名",
+        rangelength: "用户名长度必须在6到18位之间",
+        regex: "用户名只能包含大写、小写、数字和下划线"
+      },
+      email: "请输入一个正确的邮箱",
+      curPassword: {
+        required: "请输入密码",
+        rangelength: "密码长度必须在8到16位之间",
+        regex: "用户密码需要包含数字、小写字母、大写字母、符号(至少三种)"            
+      },
+      password: {
+        required: "请输入密码",
+        rangelength: "密码长度必须在8到16位之间",
+        regex: "用户密码需要包含数字、小写字母、大写字母、符号(至少三种)"            
+      },
+      password2: {
+        required: "请输入密码",
+        equalTo: "两次密码输入不一致"
+      },
+      authCode: {
+        required: "请输入验证码",
+        minlength: "验证码长度为6位"
+      },
+      agree: "请接受我们的声明"
+     }
+    })
+});
+```
+
+3. this.optional(element)作用，optional(element)：用于表单控件的值不为空时才触发验证。
+也就是说如果值为空也要触发则移除this.optional(element)。
+
+4. 与后端数据进行校验：
+```js
+remote: {
+  url: "user.do",
+  type: "post",
+  data: {
+    "cmd": "checknname"
+  }
+}
+```
+后端返回字符串“true”或false：
+```java
+response.getWriter().write("true");
+```
+
+5. 添加新的规则：
+```js
+$().ready(function() {        //必须
+  $("#inputEmail").rules("add", {                
+          remote: {
+              url: "user.do",
+              type: "post",
+              data: {
+                "cmd": "checkemail"
+              }
+          },
+                  
+          messages: {
+              remote: "email already registered!"                            
+          }
+      });
+  });
+```
+
+## 其他
+
 1. base64编码：使用js-base64库
 ```js
 import { Base64 } from 'js-base64'
 var metadata = {...}
 var headerValue = Object.entries(metadata).map(([key, value]) => `${key} ${Base64.encode(String(value))}`).join(',')
 ```
+
+2. 高精度浮点数计算： [bignumber.js](https://github.com/MikeMcl/bignumber.js)
+
+
