--- a/docs/03.技术/02.GitHub技巧/03.GitHub Actions 实现自动部署静态博客.md
+++ b/docs/03.技术/02.GitHub技巧/03.GitHub Actions 实现自动部署静态博客.md
@@ -15,9 +15,7 @@ author:
 
 ## 前言
 
-我使用vuepress搭建了一个静态博客，挂在了Github pages和[Coding pages](https://dev.tencent.com/)上面。
-
-coding pages在国内的访问速度比github pages要快很多，而且还可以被百度收录。
+我使用vuepress搭建了一个静态博客，挂在了Github pages上面。
 
 <!-- more -->
 
@@ -46,32 +44,54 @@ workflow 文件采用 [YAML 格式](https://xugaoyi.com/pages/4e8444e2d534d14f/)
 ```yaml
 name: CI
 
-# 在master分支发生push事件时触发。
-on: 
+#on: [push]
+
+# 在main分支发生push事件时触发。
+on:
   push:
     branches:
-      - master
-jobs: # 工作流
-  build:
-    runs-on: ubuntu-latest #运行在虚拟机环境ubuntu-latest
+      - main  # 注意新版本的GitHub默认主分支名由master改成了main
+
+env: # 设置环境变量
+  TZ: Asia/Shanghai # 时区（设置时区可使页面中的`最近更新时间`使用该时区时间）
+
+jobs:
+  build: # 自定义名称
+    runs-on: ubuntu-latest # 运行在虚拟机环境ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [10.x]
+        node-version: [14.x]
 
-    steps: 
+    steps:
       - name: Checkout # 步骤1
         uses: actions/checkout@v1 # 使用的动作。格式：userName/repoName。作用：检出仓库，获取源码。 官方actions库：https://github.com/actions
       - name: Use Node.js ${{ matrix.node-version }} # 步骤2
         uses: actions/setup-node@v1 # 作用：安装nodejs
         with:
           node-version: ${{ matrix.node-version }} # 版本
-      - name: run deploy.sh # 步骤3 （同时部署到github和coding）
-        env: # 设置环境变量
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }} # toKen私密变量
-          CODING_TOKEN: ${{ secrets.CODING_TOKEN }} # 腾讯云开发者平台（coding）私密token
-        run: npm install && npm run deploy # 执行的命令  
-        # package.json 中添加 "deploy": "bash deploy.sh"
+      - name: Build-and-deploy # 步骤3
+        run: |
+          remote_addr=`git remote get-url --push origin`
+          commit_info=`git describe --all --always --long`
+          user_name=`git log -1 --pretty=format:'%an'`
+          user_email=`git log -1 --pretty=format:'%ae'`
+          deploy_branch=gh-pages
+          yarn
+          yarn build
+          cd docs/.vuepress/dist
+          git config --global init.defaultBranch $deploy_branch
+          git init
+          git config user.name ${user_name}
+          git config user.email ${user_email}
+          git add -A
+          git commit -m "auto deploy, $commit_info"
+          remote_addr=`echo $remote_addr | awk -F'://' '{print $2}'`
+          remote_addr=https://${user_name}:${{secrets.ACCESS_TOKEN}}@${remote_addr}
+          git remote add origin ${remote_addr}
+          git push origin HEAD:$deploy_branch --force # 推送到github $deploy_branch分支
+
+      # 只提交到github pages也可以使用github-pages-deploy-action，详见: https://github.com/JamesIves/github-pages-deploy-action
 ```
 
 这个配置文件会在我push提交代码到主分支时触发工作，运行环境是`ubuntu-latest`，工作步骤：
@@ -79,60 +99,10 @@ jobs: # 工作流
 * 一，获取仓库源码
 
 * 二，安装nodejs，打包项目有用到nodejs
-* 三，把token设置到环境变量，安装项目依赖，并运行`deploy.sh`文件，
+
+* 三，构建项目，并把构建好的项目推送到github $deploy_branch分支
 
 > ACCESS_TOKE 和 CODING_TOKEN 都是保存在github仓库的`Settings/Secrets`位置的私密变量，仓库代码中可以通过<secrets.变量名>来获取，保证了token的私密性。
-
-
-
-再来看看将要被运行的`deploy.sh`部署代码：
-
-```sh
-#!/usr/bin/env sh
-# 确保脚本抛出遇到的错误
-set -e
-npm run build # 生成静态文件
-cd docs/.vuepress/dist # 进入生成的文件夹
-
-# deploy to github
-echo 'blog.xugaoyi.com' > CNAME
-if [ -z "$GITHUB_TOKEN" ]; then
-  msg='deploy'
-  githubUrl=git@github.com:xugaoyi/blog.git
-else
-  msg='来自github action的自动部署'
-  githubUrl=https://xugaoyi:${GITHUB_TOKEN}@github.com/xugaoyi/blog.git
-  git config --global user.name "xugaoyi"
-  git config --global user.email "894072666@qq.com"
-fi
-git init
-git add -A
-git commit -m "${msg}"
-git push -f $githubUrl master:gh-pages # 推送到github
-
-# deploy to coding
-echo 'www.xugaoyi.com\nxugaoyi.com' > CNAME  # 自定义域名
-if [ -z "$CODING_TOKEN" ]; then  # -z 字符串 长度为0则为true；$CODING_TOKEN来自于github仓库`Settings/Secrets`设置的私密环境变量
-  codingUrl=git@git.dev.tencent.com:xugaoyi/xugaoyi.git
-else
-  codingUrl=https://xugaoyi:${CODING_TOKEN}@git.dev.tencent.com/xugaoyi/xugaoyi.git
-fi
-git add -A
-git commit -m "${msg}"
-git push -f $codingUrl master # 推送到coding
-
-cd -
-rm -rf docs/.vuepress/dist
-```
-
-这个文件使用[Shell命令](https://ipcmen.com/)写的，它会先运行打包命令，进入打包好的文件，创建一个自定义域名的CNAME文件（如果你没有自定义域名可去掉这个命令），判断是否有token环境变量，如果没有说明是在本地自己的电脑上运行的部署，使用ssh代码仓库地址，如果有token环境变量，说明是GitHub Actions自动触发的部署，此时使用的是可以通过toKen来获取代码提交权限的提交地址。最后通过git命令提交到各自的仓库，完成部署。
-
-> 提示：
->
-> * Shell 可以获取到环境变量。
->
-> * 我想给两个平台上部署的博客不一样的自定义域名，因此做了分开创建CNAME文件，分开提交。
-
 
 
 至此，我前面提到的需求就实现啦，只需要把源码push到github仓库这一个步骤，后面的博客打包、部署到github和coding等工作都由GitHub Actions来自动完成。
@@ -147,7 +117,7 @@ rm -rf docs/.vuepress/dist
 
 ## 参考文档
 
-[GitHub Pages 实现部署vdoing博客](https://xugaoyi.com/pages/6b9d359ec5aa5019/)
+[GitHub Actions 实现自动部署静态博客](https://xugaoyi.com/pages/6b9d359ec5aa5019/)
 
 [GitHub Actions 定时运行代码：每天定时百度链接推送](https://xugaoyi.com/pages/f44d2f9ad04ab8d3/)
 
