--- a/docs/01.前端/30.JavaScript/85.nodejs.md
+++ b/docs/01.前端/30.JavaScript/85.nodejs.md
@@ -62,3 +62,30 @@ npm install --save body-parser
 1. 前端js压缩/混淆：UglifyJS2   [简书](https://www.jianshu.com/p/376d484fea27)
 
 [windows环境使用uglifyjs 实现批量压缩JS文件](https://blog.csdn.net/HuangSongImmanuel/article/details/88845701)
+
+
+## 服务端
+
+1. [递归读取所有文件](https://xugaoyi.com/pages/117708e0af7f0bd9/)
+```js
+var fs = require('fs');
+var path = require('path');
+ 
+function readFileList(dir, filesList = []) {
+    const files = fs.readdirSync(dir);
+    console.log(files);
+    files.forEach((item, index) => {
+        var fullPath = path.join(dir, item);
+        const stat = fs.statSync(fullPath);
+        if (stat.isDirectory()) {      
+            readFileList(path.join(dir, item), filesList);  //递归读取文件
+        } else {                
+            filesList.push(fullPath);                     
+        }        
+    });
+    return filesList;
+}
+ 
+var filesList = [];
+readFileList(__dirname,filesList);
+```
