--- a/docs/03.技术/02.博客搭建/02.GitHub Pages 实现部署vdoing博客.md
+++ b/docs/03.技术/02.博客搭建/02.GitHub Pages 实现部署vdoing博客.md
@@ -71,6 +71,10 @@ npm run dev
 
 <img src="https://cdn.staticaly.com/gh/kxuer/image_store@main/img/tempsnip.1x21a4r33ips.png" width="20%">
 
+4. [使用Gitalk实现静态博客无后台评论系统](https://xugaoyi.com/pages/1da0bf9a988eafe5/)。部署到GitHub后，登录个人账户，点击一个页面就只会初始化那个页面的issue。
+
+5. [GitHub + jsDelivr + TinyPNG+ PicGo 打造稳定快速、高效免费图床](https://xugaoyi.com/pages/a5f73af5185fdf0a/)
+
 ## 排错
 
 1. GitHub构建报错：`Module build failed (from ./node_modules/vue-loader/lib/loaders/templateLoader.js): SyntaxError: Unexpected token, expected ","`
