修补前端笔记；添加Linux类目

--- a/docs/01.前端/20.CSS/80.注意事项.md
+++ b/docs/01.前端/20.CSS/80.注意事项.md
@@ -17,6 +17,9 @@ author:
 
 1. CSS类在文档中出现的顺序也会影响实际的显示效果？->对于相同类型选择器制定的样式，在样式表文件中，越靠后的优先级越高。
 
+2. [1.5 万字 CSS 基础拾遗（核心知识、常见需求）](https://juejin.cn/post/6941206439624966152)
+
+[MDN CSS重要概念](https://developer.mozilla.org/zh-CN/docs/Web/CSS/Visual_formatting_model)
 
 ## 规范
 
@@ -158,7 +161,7 @@ border-radius:50%;
 }
 ```
 
-每一个<ul>元素的第一个子元素选择的样式：[CSS :first-child 选择器-runoob](https://www.runoob.com/cssref/sel-firstchild.html)
+每一个`<ul>`元素的第一个子元素选择的样式：[CSS :first-child 选择器-runoob](https://www.runoob.com/cssref/sel-firstchild.html)
 ```css
 ul>:first-child { background:yellow; }
 // sass语法：
