--- a/docs/01.前端/30.JavaScript/10.知识点.md
+++ b/docs/01.前端/30.JavaScript/10.知识点.md
@@ -57,6 +57,8 @@ console.log(num)    //num=10可访问
 
 7. 检测类型使用instanceof：arr instanceof Array返回true。
 
+8. JS设计模式：Module Design Pattern、Observer Design Pattern、Prototype Design Pattern、Singleton Design Pattern。[JavaScript Design Patterns](https://www.digitalocean.com/community/tutorial_series/javascript-design-patterns)
+
 ## 类型
 
 1. 简单类型和复杂类型
