--- a/docs/01.前端/30.JavaScript/80.第三方库.md
+++ b/docs/01.前端/30.JavaScript/80.第三方库.md
@@ -121,6 +121,12 @@ $(element).closest(".form-group").append(error);
 
 10. Returning false from an event handler will automatically call event.stopPropagation() and event.preventDefault().
 
+11. 执行带参数的回调函数：
+```js
+$.get( "myhtmlpage.html", function() {  //加载完myhtmlpage.html后执行匿名函数
+  myCallBack( param1, param2 );
+});
+```
 
 ### jquery-validation
 1. 表单校验（与jquery配合使用）
