--- a/docs/01.前端/31.VUE/10.笔记.md
+++ b/docs/01.前端/31.VUE/10.笔记.md
@@ -62,6 +62,49 @@ ref可以获取子组件，操作子组件的数据和方法；$children、$pare
 
 6. Vue不能检测到对象属性的添加或删除，如watch不响应：[csdn](https://blog.csdn.net/qq_41892236/article/details/121379965)
 
+7. 在vue文件中的style标签上，有一个属性：scoped。当添加scoped属性时它的样式就只能作用于当前的组件。该属性，可以使得组件之间的样式不互相污染。
+
+为什么需要穿透scoped-
+引用了第三方组件，需要在组件中局部修改第三方组件的样式，而又不想去除scoped属性造成组件之间的样式污染。此时只能通过特殊的方式，样式穿透来解决问题。
+
+* stylus穿透
+使用（>>>）
+外层类 >>> 想要修改的类名 {
+　　要修改的样式
+}
+例：
+```css
+.content >>> .el-dialog__body {
+  padding: 0;
+}
+```
+
+* sass和less穿透
+使用：（/deep/）
+外层类 /deep/ 想要修改的类名 {
+　　要修改的样式
+}
+例：
+```css
+.content /deep/ .el-dialog__body {
+  padding: 0;
+}
+```
+
+* 通用样式穿透
+使用：（::v-deep）
+::v-deep 想要修改的类名 {
+　　要修改的样式
+}
+例：
+```css
+::v-deep .el-dialog__body {
+  padding: 0;
+}
+```
+
+[element组件样式修改方式](https://blog.csdn.net/W936438835/article/details/123431314)
+
 ## 读官方文档
 
 1. 一个 Vue 应用会将其挂载到一个 DOM 元素上 (如 #app) 然后对其进行完全控制。
