--- a/docs/01.前端/40.框架/03.AngularJS.md
+++ b/docs/01.前端/40.框架/03.AngularJS.md
@@ -17,6 +17,37 @@ author:
 
 2. 翻转显示列表Reverse list in ng-repeat： `ng-repeat="feed in feeds | orderBy:'':true"`   中间不要参数
 
+3. Provider：
+```js
+angular.module("myApp", ["ui.router"])
+    .config(function($stateProvider) {
+        // Configure all available states during the config phase  
+        // using the $stateProvider!
+        $stateProvider.state("home", { ... });
+        $stateProvider.state("about", { ... });
+        $stateProvider.state("contact", { ... });
+    })
+    .run(function($state) {
+        // Use the configured $state service afters to go to the
+        // initial state! You could do the same in a service.
+        $state.go("home");
+    });
+```
+By using a provider we have the possibility to configure a service before the AngularJS application runs. We can setup things in advance which can be constant during our application lifecycle. If you need something like this, go with a provider. Other wise use a factory or service.
+
+4. 指令是如何被编译的：
+
+HTML compilation happens in three phases:
+
+  - $compile traverses the DOM and matches directives.
+    If the compiler finds that an element matches a directive, then the directive is added to the list of directives that match the DOM element. A single element may match multiple directives.
+	- Once all directives matching a DOM element have been identified, the compiler sorts the directives by their priority.
+    Each directive's compile functions are executed. Each compile function has a chance to modify the DOM. Each compile function returns a link function. These functions are composed into a "combined" link function, which invokes each directive's returned link function.
+	- $compile links the template with the scope by calling the combined linking function from the previous step. This in turn will call the linking function of the individual directives, registering listeners on the elements and setting up $watchs with the scope as each directive is configured to do.
+
+the compile phase where all of the directives are identified and sorted by priority, and a linking phase where any work which "links" a specific instance of the scope and the specific instance of an `<li>` is performed.
+> Note: Link means setting up listeners on the DOM and setting up $watch on the Scope to keep the two in sync.
+
 ### 内置指令
 
 1. ng-if 指令不同于 ng-hide， ng-hide 隐藏元素（使用css-`display: none;`），而 ng-if 是从 DOM 中移除元素。
