一些后端笔记

--- a/docs/03.技术/03.Linux/20.命令.md
+++ b/docs/03.技术/03.Linux/20.命令.md
@@ -13,6 +13,8 @@ author:
 ---
 # 命令
 
+1. nohup 后台启动Java程序：`nohup java -jar shop-admin-s.jar &`。日志就放在程序启动时所在目录下的`nohup.out`文件中。如何重定向日志输出：[csdn](https://blog.csdn.net/neusoft2016/article/details/115264591)
+
 ### curl
 
 1. 不校验自签名证书：添加参数`-k`。否则报错`curl: (60) SSL certificate problem: self signed certificate`
