--- a/docs/03.技术/03.Linux/80.Docker.md
+++ b/docs/03.技术/03.Linux/80.Docker.md
@@ -13,8 +13,50 @@ author:
 ---
 # Docker
 
-1. 拉取 Docker 镜像十分缓慢：[csdn](https://blog.csdn.net/qq_38463737/article/details/120031716)
+1. Ubuntu拉取 Docker 镜像十分缓慢：[csdn](https://blog.csdn.net/qq_38463737/article/details/120031716)
+```shell
+nano /etc/docker/daemon.json
+# 添加如下内容。其中insecure-registries项为自己的harbor仓库，如果没有可不加
+{
+  "registry-mirrors": ["https://docker.mirrors.ustc.edu.cn", "http://hub-mirror.c.163.com"],
+  "insecure-registries":["192.168.1.22:8082"]
+}
 
+sudo systemctl daemon-reload # 载入daemon.json
+sudo systemctl restart docker # 重启docker
+```
+
+2. docker引擎的日志：`journalctl -xu docker.service`。  [docker](https://docs.docker.com/config/daemon/#read-the-logs)
+
+
+## docker-compose
+
+1. 示例：
+```yml
+...
+
+  connectora:
+    image: ...
+    container_name: connectora
+    ports:
+      - 58080:8080
+    networks:
+      - local
+    volumes:
+      - ./conf/config.json:/config/config.json
+      - ./conf/connectorA.p12:/config/connectorA.p12
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/connectordb1
+      - SPRING_DATASOURCE_USERNAME=connector    #可以直接覆盖spring程序的配置，但是格式有点变化，如原来application.properties的配置为spring.datasource.username=sa，这里要为SPRING_DATASOURCE_USERNAME=...的形式
+      - SPRING_DATASOURCE_PASSWORD=12345
+      - PORTAINER_APPLICATION_SCHEME=http
+      - PORTAINER_APPLICATION_HOST=portainer-ce
+      。。。
+    extra_hosts:    # 相当于配置容器的域名->IP映射
+      - appstore:192.168.1.22
+
+...
+```
 
 ### Harbor
 
@@ -26,7 +68,7 @@ cd harbor
 cp harbor.yml.tmpl harbor.yml
 nano harbor.yml
 #1. hostname改为自己主机IP如192.168.1.22
-#2. 根据需要修改端口8090
+#2. 根据需要修改端口为如8090
 #3. 如果没有证书，注释配置文件内容：
 # https related config
 #https:
@@ -40,4 +82,96 @@ nano harbor.yml
 ```
 安装完毕，使用浏览器访问：http://192.168.1.22:8090 用户名/密码：admin/Harbor12345
 
+2. 把自己制作的镜像push到harbor中：
+
+修改docker配置信息`nano /etc/docker/daemon.json`：
+```json
+{
+    "registry-mirrors":["https://docker.mirrors.ustc.edu.cn", "http://hub-mirror.c.163.com"], 
+    "insecure-registries":["192.168.1.22:8090"]  
+}
+```
+重启docker：
+```shell
+systemctl daemon-reload
+systemctl restart docker
+docker login 192.168.1.22:8090
+#输入用户名/密码：admin/Harbor12345
+```
+查看config文件看docker配置是否成功：`nano /root/.docker/config.json`
+
+
+构建个人镜像并push到harbor中：
+```shell
+docker build . -t 192.168.1.22:8090/library/app-tpl:v1.0
+docker push 192.168.1.22:8090/library/app-tpl:v1.0
+```
+
+push成功后，登录harbor页面http://192.168.1.22:8090查看。
+
+pull镜像：`docker pull 192.168.1.22:8090/library/app-tpl:v1.0`
+
+
 参考：[csdn](https://blog.csdn.net/zlb663107/article/details/124461732)
+
+3. 为harbor配置https访问：[goharbor](https://goharbor.io/docs/2.5.0/install-config/configure-https/)
+```shell
+#如何配置证书：
+openssl genrsa -out ca.key 4096
+openssl req -x509 -new -nodes -sha512 -days 3650 \
+ -subj "/C=CN/ST=Beijing/L=Beijing/O=example/OU=Personal/CN=yourdomain.com" \
+ -key ca.key \
+ -out ca.crt
+openssl genrsa -out yourdomain.com.key 4096
+openssl req -sha512 -new \
+    -subj "/C=CN/ST=Beijing/L=Beijing/O=example/OU=Personal/CN=yourdomain.com" \
+    -key yourdomain.com.key \
+    -out yourdomain.com.csr
+# DNS.n用来配置域名，IP.n用来配置IP地址（不加IP的话可能会报错Get https://xx.xx.xx.xx/v2/: x509: cannot validate certificate for xx.xx.xx.xx because it doesn't contain any IP SANs，参考https://blog.csdn.net/weixin_40592935/article/details/85112158）
+cat > v3.ext <<-EOF
+authorityKeyIdentifier=keyid,issuer
+basicConstraints=CA:FALSE
+keyUsage = digitalSignature, nonRepudiation, keyEncipherment, dataEncipherment
+extendedKeyUsage = serverAuth
+subjectAltName = @alt_names
+
+[alt_names]
+DNS.1=yourdomain.com
+DNS.2=yourdomain
+DNS.3=hostname
+IP.1=yourIP
+EOF
+
+openssl x509 -req -sha512 -days 3650 \
+    -extfile v3.ext \
+    -CA ca.crt -CAkey ca.key -CAcreateserial \
+    -in yourdomain.com.csr \
+    -out yourdomain.com.crt
+cp yourdomain.com.crt /data/cert/
+cp yourdomain.com.key /data/cert/
+openssl x509 -inform PEM -in yourdomain.com.crt -out yourdomain.com.cert
+
+cp yourdomain.com.cert /etc/docker/certs.d/yourdomain.com/  #如果端口不是443，而是如58080，则这里的目录改为/etc/docker/certs.d/yourdomain.com:58080
+cp yourdomain.com.key /etc/docker/certs.d/yourdomain.com/
+cp ca.crt /etc/docker/certs.d/yourdomain.com/
+# 重启docker
+systemctl restart docker
+
+./prepare
+docker-compose down -v
+docker-compose up -d
+
+# 修改docker配置信息`nano /etc/docker/daemon.json`：把"insecure-registries"对应内容删掉
+
+docker login yourdomain.com  #如果端口不是443，而是如58080，则这里docker login yourdomain.com:58080
+```
+
+> 注：貌似升级为https访问后，再想改会http访问就通过不了了，浏览器登录会报401 unauthorized错误，即使重装harbor也不行。
+
+## 排错
+
+1. 通过portainer启动容器报错：`Error response from daemon: driver failed programming external connectivity on endpoint app-1668755303771 (c2d1c88d7fc168c65bfdbe01109940e99bf33622bd740a60af7bc3cee31e7d03): invalid transport protocol: 0     Error: failed to start containers: 823ffc5d503a`
+
+原因：创建容器时端口映射使用的协议错误。
+
+解决：把`8080/HTTP/1.1`改为`8080/tcp`
