--- a/docs/02.后端/20.Java/80.Maven.md
+++ b/docs/02.后端/20.Java/80.Maven.md
@@ -13,7 +13,10 @@ author:
 ---
 # Maven
 
+1. maven仓库与jar查找：[csdn](https://blog.csdn.net/trayvontang/article/details/125892705)
 
+2. jar包手动添加到本地maven仓库：`mvn install:install-file -DgroupId=com.baidubce -DartifactId=bce-java-sdk -Dversion=0.10.21 -Dpackaging=jar -Dfile=E:\repository\bce-java-sdk-0.10.210.jar` [csdn](https://blog.csdn.net/m0_37450089/article/details/127757906)
+[csdn](https://blog.csdn.net/yu97271486/article/details/119998149)
 
 ## 排错
 
@@ -22,3 +25,7 @@ author:
 解决：`mvn -N io.takari:maven:wrapper`
 
 参考：[csdn](https://blog.csdn.net/blueheart20/article/details/51601441#)
+
+2. `./mvnw clean package`报错：`was cached in the local repository, resolution will not be reattempted until the update interval of io.spring.repo.maven.release has elapsed or updates are forced`
+
+解决（可能有效）：`./mvnw clean package -U`，不行就尝试上面的`jar包手动添加到本地maven仓库`。   [csdn](https://blog.csdn.net/wqc19920906/article/details/119057159) 
