--- a/docs/01.前端/30.JavaScript/70.笔记.md
+++ b/docs/01.前端/30.JavaScript/70.笔记.md
@@ -113,6 +113,8 @@ deleteRow(row) {
 
 1. 去掉小数部分：parseInt(from)
 
+2. 字符串转Number：`let num = +('1.1')`
+
 ### 正则表达式
 
 1. 常用的正则表达式：[runoob](https://c.runoob.com/front-end/854/) [csdn](https://blog.csdn.net/amberom/article/details/123705608)
