--- a/docs/01.前端/30.JavaScript/80.第三方库.md
+++ b/docs/01.前端/30.JavaScript/80.第三方库.md
@@ -265,4 +265,4 @@ var headerValue = Object.entries(metadata).map(([key, value]) => `${key} ${Base6
 
 2. 高精度浮点数计算： [bignumber.js](https://github.com/MikeMcl/bignumber.js)
 
-
+3. 格式化日期：momentjs
