--- a/docs/01.前端/30.JavaScript/85.nodejs.md
+++ b/docs/01.前端/30.JavaScript/85.nodejs.md
@@ -24,6 +24,11 @@ author:
 
 1. 安装Node.js和npm：[廖雪峰](https://www.liaoxuefeng.com/wiki/1022910821149312/1023025597810528)
 
+2. Windows升级nodejs版本（从v12.18.3升级到v16.18.1可行）：
+  - 打开cmd查看你之前node版本安装的路径：`where node`
+  - 直接去官网[nodejs](https://nodejs.org/en/download/releases/)下载与你电脑系统（32位还是64位）对应的最新LTS的msi版本，安装在上述路径中覆盖即可。
+  - `node -v`，发现更新到最新版本了。成功！
+
 
 ## NPM
 
@@ -56,6 +61,19 @@ npm install --save body-parser
 [url "https://github.com/adobe-webplatform/eve.git"]
     insteadof = git://github.com/adobe-webplatform/eve.git
 ```
+
+4. `npm run dev`后报错：
+```error
+import { defineConfig4CustomTheme } from "vuepress/config";
+         ^^^^^^^^^^^^^^^^^^^^^^^^
+SyntaxError: The requested module 'vuepress/config' is expected to be of type CommonJS, which does not support named exports. CommonJS modules can be imported by importing the default export.
+For example:
+import pkg from 'vuepress/config';
+const { defineConfig4CustomTheme } = pkg;
+```
+原因：貌似是nodejs v12.18.3语法不支持import the default export。
+
+解决：升级nodejs版本，从v12.18.3升级到v16.18.1就不报错了。
 
 ## 第三方库
 
