--- a/docs/01.前端/31.VUE/54.element-ui.md
+++ b/docs/01.前端/31.VUE/54.element-ui.md
@@ -44,3 +44,14 @@ el-form表单封装，很全很详细：[csdn](https://blog.csdn.net/qq_37346639
     }
   },
 ```
+
+Dialog 的内容是懒渲染的，导致调用Dialog里面组件的方法会报错`Cannot read properties of undefined`。[h5w3](https://www.h5w3.com/152718.html)  [csdn](https://blog.csdn.net/gdutRex/article/details/103823811) [baidu](https://wenku.baidu.com/view/97e1f73f13a6f524ccbff121dd36a32d7375c762.html?_wkts_=1671888249229&bdQuery=elementUI+dialog%E6%87%92%E5%8A%A0%E8%BD%BD%E9%97%AE%E9%A2%98)
+
+解决：目前可行-
+```js
+this.$refs.addResourcePage.show() //先设置窗口显示为true
+// 必须在弹窗打开后调用
+this.$nextTick(() => {  //关键
+  this.$refs.addResourcePage.loadResource() //这里会调用addResourcePage窗口里面的组件的方法
+})
+```
