--- a/docs/01.前端/32.浏览器/80.注意事项.md
+++ b/docs/01.前端/32.浏览器/80.注意事项.md
@@ -15,3 +15,5 @@ author:
 
 1. 在默认的请求上，浏览器只能访问以下默认的 响应头`Cache-Control，Content-Language，Content-Type，Expires，Last-Modified，Pragma`
 如果想让浏览器能访问到其他的 响应头的话 需要在服务器上设置 `Access-Control-Expose-Headers`。[Vuejs之axios获取Http响应头-csdn](https://blog.csdn.net/weixin_51634305/article/details/115067588)
+
+2. Basic认证失败时，http status为401，避免浏览器弹出认证框：在服务端response headers中去除 WWW-Authenticate: Basic realm="Realm" 即可。[segmentfault](https://segmentfault.com/a/1190000019544956)
