--- a/docs/01.前端/33.ES6/10.知识点.md
+++ b/docs/01.前端/33.ES6/10.知识点.md
@@ -112,7 +112,11 @@ let arr = [...oDivs];
 * 查找数组中第一个符合条件的成员：arr.find(argFunc)
 * 查找数组中第一个符合条件的成员的位置：arr.findIndex(argFunc)
 
-8. 模板字符串：可以解析变量值、可以换行、可以调用函数（获得返回值）。
+8. 模板字符串：可以解析变量值（可嵌入表达式）、可以换行、可以调用函数（获得返回值）。
+```js
+let width = 100;
+let str = `width + 100 = ${width + 100}`;   //str是字符串：'width + 100 = 200'
+```
 
 9. String对象扩展方法：
 ```js
@@ -245,6 +249,17 @@ p.then(function(value){    //p的状态为成功时的回调
 * await：必须写在async函数中；其右侧表达式的值一般为Promise对象；await返回的是Promise对象成功的值；如果Promise对象失败了，就会抛出异常，需要try...catch处理。
 
 示例：https://www.bilibili.com/video/BV1uK411H7on?p=52
+
+```js
+async callAndCheck(url) {   //声明为异步函数
+let resp = {}
+
+await axios.get(url).then(response => { //同步等待http请求完成
+  resp = response.data
+}).catch(err => {
+    resp = err
+})
+```
 
 2. 对象方法扩展：Object.values(obj); Object.entries(obj); Object.getOwnPropertyDescriptors(obj);
 
