--- a/docs/02.后端/20.Java/50.笔记.md
+++ b/docs/02.后端/20.Java/50.笔记.md
@@ -21,3 +21,7 @@ java -version
 sudo apt-get install maven
 mvn -version
 ```
+
+2. windows jdk8，17安装：[csdn](https://blog.csdn.net/qq_34552189/article/details/123622036) [jianshu-Windows10同时安装jdk8和jdk17](https://www.jianshu.com/p/ea4c068ab13c)
+
+> 注意：jdk17自带jre，无需配置%JAVA_HOME%\jre\bin;
