--- a/docs/01.前端/31.VUE/52.vue-router.md
+++ b/docs/01.前端/31.VUE/52.vue-router.md
@@ -26,7 +26,12 @@ children：路由嵌套
       <!-- 通过传入 `to` 属性指定链接. -->
       <!-- <router-link> 默认会被渲染成一个 `<a>` 标签 -->
       <router-link to="/foo">Go to Foo</router-link>
-      <router-link to="/bar">Go to Bar</router-link>
+      <router-link to="/bar">
+            <!-- element-ui的按钮 -->
+            <el-button type="primary" class="no-uppercase"> 
+                Go to Bar
+            </el-button>
+      </router-link>
     </p>
     <!-- 路由出口 -->
     <!-- 路由匹配到的组件将渲染在这里 -->
