--- a/docs/03.技术/03.Linux/20.命令.md
+++ b/docs/03.技术/03.Linux/20.命令.md
@@ -28,3 +28,7 @@ curl  https://localhost:8081 -k
 ```shell
 wget --no-check-certificate https://localhost:8081
 ```
+
+### top
+
+1. 查看指定进程里各线程的CPU占用量：`top -Hp [进程号]`
