添加echarts折线图示例

--- a/docs/01.前端/40.框架/04.Echarts.md
+++ b/docs/01.前端/40.框架/04.Echarts.md
@@ -52,3 +52,69 @@ author:
 2. 提供数据时数据顺序一般要与官方的数据顺序一致，否则显示出来的图表可能与理想的不一样。
 
 如k-lines默认数据顺序：开盘(open)，收盘(close)，最低(lowest)，最高(highest) 。
+
+3. 折线图示例：
+![图](https://cdn.statically.io/gh/kxuer/image_store@main/img/1697110514353.2c1ptct3824g.png '图')
+
+```
+const data = [
+    [-6.0, 0, 'is1'],
+    [8.07, 100, 'is2'],
+    [10.0, 150, 'is3'],
+    [9.05, 220, 'is4'],
+    [2.0, 350, 'is5'],
+    [-1.0, 500, 'is6'],
+];
+
+option = {
+    legend: {
+        data: ['T1', 't2']
+    },
+    tooltip: {
+        trigger: 'axis',
+        formatter: function (params, ticket, callback) {
+            return '数据：' + params[0].data[2] + '<br />位置：' + params[0].data[1] + '<br />速度：' + params[0].data[0];
+        },
+        axisPointer: {
+            axis: 'y'
+        }
+    },
+    xAxis: [{
+        type: 'value',
+        name: 'X方向',
+        nameLocation: 'center',
+        nameTextStyle: {
+            padding: [10, 0, 0, 0]
+        }
+    }
+    ],
+    yAxis:    {
+        type: 'value',
+        name: 'Z方向位置(mm)',
+        axisLabel: {
+            formatter: '{value} mm'
+        }
+    },
+    series: [
+        {
+            name: 'Temperature',
+            type: 'line',
+            data: data,
+            smooth: true
+        },
+        {
+            name: 't2',
+            type: 'line',
+            data: [
+                [-3.0, 10],
+                [8.07, 120],
+                [10.0, 160],
+                [9.05, 230],
+                [2.0, 310],
+                [-1.0, 520],
+            ],
+            smooth: true
+        }
+    ]
+};
+```
